poly-bench-grammar/test/corpus/hooks.txt
================================================================================
Flat hook syntax
================================================================================

suite test {
    bench foo {
        before go: setup()
        go: run()
        after go: cleanup()
    }
}

--------------------------------------------------------------------------------

(source_file
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (before_hook
            (hook_flat
              language: (language_tag)
              (inline_code)))
          (language_implementation
            language: (language_tag)
            (inline_code))
          (after_hook
            (hook_flat
              language: (language_tag)
              (inline_code))))))))

================================================================================
Skip and validate hooks
================================================================================

suite test {
    bench foo {
        skip go: shouldSkip()
        validate go: isValid(result)
        go: run()
    }
}

--------------------------------------------------------------------------------

(source_file
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (skip_hook
            (hook_flat
              language: (language_tag)
              (inline_code)))
          (validate_hook
            (hook_flat
              language: (language_tag)
              (inline_code)))
          (language_implementation
            language: (language_tag)
            (inline_code)))))))

================================================================================
Each hook
================================================================================

suite test {
    bench foo {
        each go: prepareIteration()
        go: run()
    }
}

--------------------------------------------------------------------------------

(source_file
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (each_hook
            (hook_flat
              language: (language_tag)
              (inline_code)))
          (language_implementation
            language: (language_tag)
            (inline_code)))))))

================================================================================
Tags property
================================================================================

suite test {
    bench foo {
        tags: ["performance", "critical", "regression"]
        go: run()
    }
}

--------------------------------------------------------------------------------

(source_file
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (tags_property
            (string_array
              (string
                (string_content))
              (string
                (string_content))
              (string
                (string_content))))
          (language_implementation
            language: (language_tag)
            (inline_code)))))))
